# gpproto

./: .gitignore  CMakeLists.txt  README.md
example/android/GPProtoImpl/gp/include/gp/proto/: gp_client.h
example/gpSwift/gp/include/gp/proto/: gp_client.h  gp_client_data.h  gp_client_export.h
example/gpSwift/gp/lib/: libgpclient.dylib
example/gpSwift/gp/lib/cmake/gp/: GPTargets-debug.cmake  GPTargets-release.cmake  GPTargets.cmake
example/gpSwift/gpSwift/: ProtoImpl.mm  gpSwift-Bridging-Header.h  main.swift
example/gpSwift/gpSwift.xcodeproj/: project.pbxproj
example/gpSwift/gpSwift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/ios/GPProtoImpl/GPProtoImpl/: AppDelegate.swift  Extensions.swift  GPProtoImpl-Bridging-Header.h  ProtoImpl.h  ProtoImpl.mm  ViewController.swift
example/ios/GPProtoImpl/GPProtoImpl.xcodeproj/: project.pbxproj
example/ios/GPProtoImpl/GPProtoImpl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/ios/GPProtoImpl/GPProtoImpl/Base.lproj/: LaunchScreen.storyboard
example/ios/GPProtoImpl/GPProtoImpl/gp/include/gp/proto/: gp_client.h
example/ios/GPProtoImpl/GPProtoImplTests/: GPProtoImplTests.swift
example/ios/GPProtoImpl/GPProtoImplUITests/: GPProtoImplUITests.swift
example/ios/GPProtoImpl/gp/include/gp/proto/: gp_client_data.h
example/ios/GPProtoImpl/gp/lib/cmake/gp/: GPTargets-debug.cmake  GPTargets.cmake
gp/net/: ProtoError.h  TcpTransport.cpp  TcpTransport.h  Transport.cpp  Transport.h  TransportDelegate.cpp  TransportDelegate.h
gp/network/: IncomingMessage.h  MessageTransaction.h  OutgoingMessage.h  TcpTransport.cpp  TcpTransport.h  TcpTransportContext.cpp  TcpTransportContext.h  TcpTransportContextDelegate.h  Transport.cpp  Transport.h  TransportDelegate.h  TransportScheme.cpp  TransportScheme.h
gp/proto/: AuthKeyInfo.cpp  AuthKeyInfo.h  ClientSync.cpp  ClientSync.h  Context.cpp  Context.h  ContextChangeDelegate.h  Core.cpp  Core.h  DatacenterAddress.h  DatacenterAuthAction.cpp  DatacenterAuthAction.h  DatacenterAuthMessageService.cpp  DatacenterAuthMessageService.h  DatacenterSaltsetInfo.cpp  DatacenterSaltsetInfo.h  InternalParser.h  JsonAdapter.cpp  JsonAdapter.h  MessageEncryptionKey.cpp  MessageEncryptionKey.h  MessageService.h  MessageTransaction.h  PreparedMessage.h  Proto.cpp  Proto.h  ProtoDelegate.h  ProtoInternalMessage.h  Request.cpp  Request.h  RequestContext.cpp  RequestContext.h  RequestMessageService.cpp  RequestMessageService.h  ScheduledMessageConfirmation.h  Session.cpp  Session.h  TimeFixContext.h  TimeSyncMessageService.cpp  TimeSyncMessageService.h  (+7 more)
gp/proto/jni/: swig_module_libclient_wrap.c
gpnet/: CMakeLists.txt
gpnet/gp/net/: Connection.h  ConnectionDelegate.h  NetworkAddress.cpp  NetworkAddress.h  NetworkSocket.cpp  NetworkSocket.h  NetworkSocketDelegate.h  TcpConnection.cpp  TcpConnection.h
gpnet/gp/net/os/posix/: NetworkSocketPosix.cpp  NetworkSocketPosix.h
gpnet/gp/net/os/windows/: NetworkSocketWinsock.cpp  NetworkSocketWinsock.h
gputils/: CMakeLists.txt
gputils/gp/utils/: BigNum.cpp  BigNum.h  Buffer.cpp  Buffer.h  ByteOrder.h  Common.cpp  Common.h  Crypto.cpp  Crypto.h  CustomStringConvertable.h  DispatchQueue.cpp  DispatchQueue.h  DispatchQueuePool.cpp  DispatchQueuePool.h  File.h  FileInfo.h  InputStream.cpp  InputStream.h  InputStreamException.h  Logging.c  Logging.cpp  Logging.h  OutputStream.cpp  OutputStream.h  OutputStreamException.cpp  OutputStreamException.h  Random.cpp  Random.h  Runloop.cpp  Runloop.h  SecureKeychain.cpp  SecureKeychain.h  Semaphore.h  StreamNode.cpp  StreamNode.h  StreamSlice.cpp  StreamSlice.h  StringUtils.cpp  StringUtils.h  Timer.cpp  (+1 more)
gputils/gp/utils/filesystem/: File.h  FileInfo.cpp  FileInfo.h  FileSystem.h  NativeFile.cpp  NativeFile.h  NativeFileSystem.cpp  NativeFileSystem.h
gputils/gp/utils/os/darwin/: GPLogWrapperDarwin.cpp  GPLogWrapperDarwin.h
install/include/gp/proto/: Proto.h
ios-install/include/gp/proto/: Proto.h
ios-install/lib/cmake/gp/: GPTargets-debug.cmake  GPTargets-release.cmake  GPTargets.cmake
scripts/Android/: build_android.sh  cmake_build_arm64-v8a.sh  cmake_build_armeabi-v7a.sh  cmake_build_x86.sh  cmake_build_x86_64.sh  swig_module_libclient.i  swig_module_libclient_wrap.c
scripts/Android/gp/proto/: gp_client_data.h
scripts/Android/jni/include/: swig_module_libclient.i
scripts/Android/jni/include/gp/proto/: gp_client.h  gp_client_data.h  gp_client_export.h
scripts/Android/jni/include/org/gp/libclient/: SWIGTYPE_p_unsigned_int.java  gp_connection_state.java  gp_data.java  gp_error.java  gp_tx_data.java  libclient.java  libclientJNI.java
scripts/Android/org/gp/libclient/: SWIGTYPE_p_int.java  SWIGTYPE_p_long.java  SWIGTYPE_p_long_long.java  SWIGTYPE_p_unsigned_char.java  UnsignedCharArray.java  gp_environment.java  gp_event.java  gp_rx_data.java  gp_rx_event.java  libclient.java  libclientJNI.java
scripts/iOS/: cmake_build_os.sh  cmake_build_sim.sh  ios_build.sh  ios_build_sim_only.sh  ios_build_sim_only_fast.sh
test/: CMakeLists.txt  Crypto.cpp  Filesystem.cpp  Logging.cpp  Streams.cpp  Timers.cpp  mytest.cpp  mytest.h
toolchains/: Android.cmake  iOS.cmake  iOS_old.cmake
